Add New Users 1.0.3
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/add-new-users@1797 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,12 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.0.3 - 01/04/2011
+----------------------------------------------------------------------
+- 3.1+ compatibility update.
+- Internationalization.
+- Security fixes.
+
 1.0.2 - 06/01/2010
 ----------------------------------------------------------------------
 - 3.0+ compatibility update
