Add New Users 1.0.4
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/add-new-users@2755 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,13 @@
 Plugin Name: Add New Users
-Author: Andrew Billits
+Author: Andrew Billits, Ulrich Sossou
 
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+
+1.0.4 - 02/17/2011
+----------------------------------------------------------------------
+- Fix fatal error with current_user_can
 
 1.0.3 - 01/04/2011
 ----------------------------------------------------------------------
