--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.0.5 - 02/22/2011
+----------------------------------------------------------------------
+- Enhancement: singlesite support
+
 1.0.4 - 02/17/2011
 ----------------------------------------------------------------------
 - Fix fatal error with current_user_can
