Add New Users: fix version number 1.0.6
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/add-new-users@2841 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,12 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.0.6 - 02/24/2011
+----------------------------------------------------------------------
+- Bug fix: nonce not defined during queue processing
+- Enhancement: allow admin page access to all users who have edit_users
+capability
+
 1.0.5 - 02/22/2011
 ----------------------------------------------------------------------
 - Enhancement: singlesite support
