Fix for Admin vs Super Admin level permissions
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/add-new-users@3468 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.0.7 - 05/18/2011
+----------------------------------------------------------------------
+- Fix for Admin vs Super Admin level permissions
+
 1.0.6 - 02/24/2011
 ----------------------------------------------------------------------
 - Bug fix: nonce not defined during queue processing
