Updated changelog and version number

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.0.8 - 02/19/2017
+----------------------------------------------------------------------
+- Fix: PHP7 compatibility
+
 1.0.7 - 05/18/2011
 ----------------------------------------------------------------------
 - Fix for Admin vs Super Admin level permissions
